tests/ui/consts/const-eval/issue-50814-2.normal.stderr
error[E0080]: index out of bounds: the length is 3 but the index is 42
  --> $DIR/issue-50814-2.rs:17:24
   |
LL |     const BAR: usize = [5, 6, 7][T::BOO];
   |                        ^^^^^^^^^^^^^^^^^ evaluation of `<A<()> as Foo<()>>::BAR` failed here

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:21:6
   |
LL |     &<A<T> as Foo<T>>::BAR
   |      ^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:21:5
   |
LL |     &<A<T> as Foo<T>>::BAR
   |     ^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> $DIR/issue-50814-2.rs:21:6
   |
LL |     &<A<T> as Foo<T>>::BAR
   |      ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: the above error was encountered while instantiating `fn foo::<()>`
  --> $DIR/issue-50814-2.rs:33:22
   |
LL |     println!("{:x}", foo::<()>() as *const usize as usize);
   |                      ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
